Keep up w/Rust nightly: std::thread, travis cfg

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,4 +1,4 @@
 
 test:
-	LD_LIBRARY_PATH=../target/debug LD_PRELOAD=libfaultinj.so python3 -m unittest discover --verbose
+	LD_LIBRARY_PATH=../target/debug LD_PRELOAD=libfaultinj.so python -m unittest discover --verbose
 	LD_LIBRARY_PATH=../target/debug LD_PRELOAD=libfaultinj.so ruby test.rb
