--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,4 +1,7 @@
+all: test
+
+LIBS := LD_LIBRARY_PATH=../target/debug LD_PRELOAD=libfaultinj.so
 
 test:
-	LD_LIBRARY_PATH=../target/debug LD_PRELOAD=libfaultinj.so python -m unittest discover --verbose
-	LD_LIBRARY_PATH=../target/debug LD_PRELOAD=libfaultinj.so ruby test.rb
+	$(LIBS) ruby test.rb
+	$(LIBS) python3 -m unittest discover --verbose
