--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,8 @@ matrix:
       rust: nightly
       dist: trusty
       sudo: required
+  allow_failures:
+  - os: osx
 
 script:
   - cargo build --release
